Fix about page on mobile

--- a/server/views/onibe-light/page/about/about.scss
+++ b/server/views/onibe-light/page/about/about.scss
@@ -1,6 +1,4 @@
 .about {
-  min-height: calc(100vh - 70px);
-  height: 100%;
   background: $lighter-black;
   background-image:  url("/onibe-light/images/aqours-seiyuus.png");
   background-size: cover;
@@ -12,7 +10,7 @@
   &-cover {
     background: rgba(0,0,0,0.65);
     color: #FFF;
-    padding: 160px 0 80px 0;
+    padding: 120px 0 40px 0;
     line-height: 32px;
   }
   .container {
